--- a/RoR2 Run Generator/RoR2 Run Generator.csproj
+++ b/RoR2 Run Generator/RoR2 Run Generator.csproj
@@ -8,4 +8,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="WeightedRandomizer" Version="2.0.1" />
+    </ItemGroup>
+
+
 </Project>
