--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 /qodana.yaml
-/.idea
-/.idea/.idea.RoR2 Run Generator
-/.idea/.idea.RoR2 Run Generator/.idea
-/RoR2 Run Generator/bin
-/RoR2 Run Generator/obj
+.idea/
+RoR2 Run Generator/bin/
+RoR2 Run Generator/obj/
